added kit-countdown worker, it fails at the moment, will fix later

--- a/src/sections/L1sec6-bonuses.html
+++ b/src/sections/L1sec6-bonuses.html
@@ -21,13 +21,15 @@
                     <lottie-player class="origin-top-left w-full h-auto" src="https://cdn.lottielab.com/l/7pSBq27oeaVBMS.json" loop autoplay></lottie-player>
                 </div>
                 <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 lg:flex overflow-hidden hidden lg:gap-4">
-                    <div class="self-stretch flex-col justify-start items-start gap-3 flex">
-                        <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                            <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Ofertă limitată:</h4>
+                    <div class="self-stretch justify-start items-center gap-2 flex-col flex overflow-hidden">
+                        <div class="self-stretch justify-start items-center gap-4 inline-flex">
+                            <div class="grow shrink basis-0 text-grays-1000 text-base font-normal ">Pentru că fiecare document este personalizat, putem oferi acest bonus doar pentru un număr limitat de persoane.</div>
                         </div>
-                    </div>
-                    <div class="self-stretch justify-start items-center gap-4 inline-flex">
-                        <div class="grow shrink basis-0 text-grays-1000 text-base font-normal ">Din cauza numărului mare de persoane care procură acest kit, acest bonus este valabil GRATIS pentru o perioadă limitată de timp: </div>
+                        <div class="self-stretch flex-col justify-start items-start gap-3 flex">
+                            <div class="self-stretch flex-col justify-start items-start gap-1 flex">
+                                <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Locuri disponibile:</h4>
+                            </div>
+                        </div>
                     </div>
                     <div class="timer-container self-stretch p-2 pb-3 bg-grays-75 rounded-lg border-2 border-[#ff0000] justify-center items-center flex flex-col">
                         <div class="inline-flex items-center gap-2.5">
@@ -59,13 +61,15 @@
                 </div>
             </div>
             <div class="self-stretch px-4 py-6 bg-white rounded-2xl flex-col justify-start items-start gap-4 flex overflow-hidden lg:hidden">
-                <div class="self-stretch flex-col justify-start items-start gap-3 flex">
-                    <div class="self-stretch flex-col justify-start items-start gap-1 flex">
-                        <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Ofertă limitată:</h4>
+                <div class="self-stretch justify-start items-center gap-2 flex-col flex overflow-hidden">
+                    <div class="self-stretch justify-start items-center gap-4 inline-flex">
+                        <div class="grow shrink basis-0 text-grays-1000 text-base font-normal ">Pentru că fiecare document este personalizat, putem oferi acest bonus doar pentru un număr limitat de persoane.</div>
                     </div>
-                </div>
-                <div class="self-stretch justify-start items-center gap-4 inline-flex">
-                    <div class="grow shrink basis-0 text-grays-1000 text-base font-normal ">Din cauza numărului mare de persoane care procură acest kit, acest bonus este valabil GRATIS pentru o perioadă limitată de timp: </div>
+                    <div class="self-stretch flex-col justify-start items-start gap-3 flex">
+                        <div class="self-stretch flex-col justify-start items-start gap-1 flex">
+                            <h4 class="self-stretch text-center text-red-650 text-2xl font-medium font-serif">Locuri disponibile:</h4>
+                        </div>
+                    </div>
                 </div>
                 <div class="timer-container self-stretch p-2 pb-3 bg-grays-75 rounded-lg border-2 border-[#ff0000] justify-center items-center flex flex-col">
                     <div class="inline-flex items-center gap-2.5">
