updated product names

--- a/src/sections/L1sec8-mainCTA.html
+++ b/src/sections/L1sec8-mainCTA.html
@@ -64,7 +64,7 @@
                                 <div class="self-stretch p-3 bg-[#fff1e4] rounded-lg justify-center items-center gap-4 inline-flex">
                                     <div class="w-5 h-5 relative"><img src="/src/assets/images/icons/number-1.png" alt="number icon"></div>
                                     <div class="grow shrink basis-0 flex-col justify-center items-start gap-1 inline-flex">
-                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Services and Pricing Portfolio</div>
+                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Portofoliu | Servicii și Prețuri</div>
                                         <div class="self-stretch text-grays-1000 text-lg font-normal ">Portofoliu gata de personalizat, pentru a te prezenta profesionist.</div>
                                         <div class="w-full justify-between items-center gap-2 inline-flex content-center">
                                             <div class="text-beige-700 text-sm font-semibold w-min text-nowrap ">Valoare: 60€</div>
@@ -75,7 +75,7 @@
                                 <div class="self-stretch p-3 bg-[#fff1e4] rounded-lg justify-center items-center gap-4 inline-flex">
                                     <div class="w-5 h-5 relative"><img src="/src/assets/images/icons/number-2.png" alt="number icon"></div>
                                     <div class="grow shrink basis-0 flex-col justify-center items-start gap-1 inline-flex">
-                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Client Proposal</div>
+                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Plan de Colaborare | Client Proposal</div>
                                         <div class="self-stretch text-grays-1000 text-lg font-normal ">Propunere de colaborare detaliată, concepută să impresioneze.</div>
                                         <div class="w-full justify-between items-center gap-2 inline-flex content-center">
                                             <div class="text-beige-700 text-sm font-semibold w-min text-nowrap ">Valoare: 25€</div>
@@ -86,7 +86,7 @@
                                 <div class="self-stretch p-3 bg-[#fff1e4] rounded-lg justify-center items-center gap-4 inline-flex">
                                     <div class="w-5 h-5 relative"><img src="/src/assets/images/icons/number-3.png" alt="number icon"></div>
                                     <div class="grow shrink basis-0 flex-col justify-center items-start gap-1 inline-flex">
-                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">New Client Questionnaire</div>
+                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Formular de Descoperire a Brandului</div>
                                         <div class="self-stretch text-grays-1000 text-lg font-normal ">Chestionar pentru a înțelege rapid nevoile clienților.</div>
                                         <div class="w-full justify-between items-center gap-2 inline-flex content-center">
                                             <div class="text-beige-700 text-sm font-semibold w-min text-nowrap ">Valoare: 20€</div>
@@ -97,7 +97,7 @@
                                 <div class="self-stretch p-3 bg-[#fff1e4] rounded-lg justify-center items-center gap-4 inline-flex">
                                     <div class="w-5 h-5 relative"><img src="/src/assets/images/icons/number-4.png" alt="number icon"></div>
                                     <div class="grow shrink basis-0 flex-col justify-center items-start gap-1 inline-flex">
-                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Social Media Strategy</div>
+                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Strategia de Social Media</div>
                                         <div class="self-stretch text-grays-1000 text-lg font-normal ">Strategii clare pentru a crea și implementa planuri de succes.</div>
                                         <div class="w-full justify-between items-center gap-2 inline-flex content-center">
                                             <div class="text-beige-700 text-sm font-semibold w-min text-nowrap ">Valoare: 70€</div>
@@ -119,7 +119,7 @@
                                 <div class="self-stretch p-3 bg-[#fff1e4] rounded-lg justify-center items-center gap-4 inline-flex">
                                     <div class="w-5 h-5 relative"><img src="/src/assets/images/icons/number-6.png" alt="number icon"></div>
                                     <div class="grow shrink basis-0 flex-col justify-center items-start gap-1 inline-flex">
-                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Email Templates for SMM</div>
+                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Email Templates pentru SMM</div>
                                         <div class="self-stretch text-grays-1000 text-lg font-normal ">Șabloane de e-mail pentru onboarding, follow-up, cereri de aprobare.</div>
                                         <div class="w-full justify-between items-center gap-2 inline-flex content-center">
                                             <div class="text-beige-700 text-sm font-semibold w-min text-nowrap ">Valoare: 25€</div>
@@ -130,7 +130,7 @@
                                 <div class="self-stretch p-3 bg-[#fff1e4] rounded-lg justify-center items-center gap-4 inline-flex">
                                     <div class="w-5 h-5 relative"><img src="/src/assets/images/icons/number-7.png" alt="number icon"></div>
                                     <div class="grow shrink basis-0 flex-col justify-center items-start gap-1 inline-flex">
-                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">8 Step Discovery Call Checklist</div>
+                                        <div class="self-stretch text-grays-1000 text-lg font-semibold ">Checklist în 8 Pași pentru Apelurile de Descoperire</div>
                                         <div class="self-stretch text-grays-1000 text-lg font-normal ">Ghid pas cu pas pentru apeluri eficiente cu clienții.</div>
                                         <div class="w-full justify-between items-center gap-2 inline-flex content-center">
                                             <div class="text-beige-700 text-sm font-semibold w-min text-nowrap ">Valoare: 10€</div>
