--- a/src/sections/L1sec5-breakdown.html
+++ b/src/sections/L1sec5-breakdown.html
@@ -13,7 +13,7 @@
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #1</p>
-                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Services and Pricing Portfolio</h3>
+                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Portofoliu | Servicii și Prețuri</h3>
                             <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 60€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
@@ -39,7 +39,7 @@
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #2</p>
-                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Client Proposal</h3>
+                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Plan de Colaborare | Client Proposal</h3>
                             <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 25€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
@@ -65,7 +65,7 @@
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #3</p>
-                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">New Client Questionnaire</h3>
+                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Formular de Descoperire a Brandului</h3>
                             <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 20€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
@@ -105,7 +105,7 @@
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #4</p>
-                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Social Media Strategy</h3>
+                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Strategia de Social Media</h3>
                             <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 70€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
@@ -157,7 +157,7 @@
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #6</p>
-                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Email Templates for SMM</h3>
+                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Email Templates pentru SMM</h3>
                             <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 25€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
@@ -183,7 +183,7 @@
                     <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center lg:items-center lg:gap-4 lg:basis-3/5 ">
                         <div class="self-stretch flex-col justify-start items-start gap-1 flex">
                             <p class="self-stretch text-center text-red-650 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Produsul #7</p>
-                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Your 8 Step Discovery Call Checklist</h3>
+                            <h3 class="self-stretch text-center text-grays-1000 text-2xl font-bold font-serif lg:text-3xl md:max-lg:text-3xl lg:text-left md:max-lg:text-left">Checklist în 8 Pași pentru Apelurile de Descoperire</h3>
                             <div class="self-stretch text-center text-grays-800 text-base font-medium lg:text-xl md:max-lg:text-xl lg:text-left md:max-lg:text-left">Valoare: 10€</div>
                         </div>
                         <div class="self-stretch flex-col justify-start items-start gap-3 flex lg:justify-center">
